--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,6 @@
     <string name="linkrepo">https://github.com/jldenzel/NewsLetter</string>
     <string name="libraries_used">Librairies Externes Utilisées</string>
     <string name="functionalities">Fonctionnalités de notre application</string>
+
+    <string name="aboutus">A propos de nous</string>
 </resources>
