--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="nizeyimana">Jean-Eric NIZEYIMANA / GitHub: @jldenzel</string>
     <string name="babeau">Corentin BABEAU / GitHub: @Urukrode</string>
     <string name="argento">Jordan ARGENTO</string>
+    <string name="mallassagne">Pierre MALLASSAGNE</string>
     <string name="repo">Repository du projet (Github)</string>
     <string name="linkrepo">https://github.com/jldenzel/NewsLetter</string>
     <string name="libraries_used">Librairies Externes Utilisées</string>
